# ai-worker

./: .gitignore  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run.py
data/audit/: audit.jsonl
mnt/user-data/outputs/asi_v8/asi/tools/: __init__.py
src/ai_worker/: audit.py  cli.py  config.py  errors.py  kernel.py  memory.py  security.py
src/ai_worker/tools/: __init__.py  calc_tool.py  file_tool.py  registry.py  web_tool.py
src/asi/: __init__.py  cli.py  config.py  router.py
tests/: test_attack_vectors.py  test_pipeline.py  test_security.py
