[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "asi_v8"
version = "8.0.0"
description = "ASI v8 — Production-grade single-agent AI execution runtime"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "asteval>=1.0",
    "click>=8.1",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[project.scripts]
asi = "asi.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
