[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-worker"
version = "8.0.0"
description = "AI Worker — Production-grade single-agent AI execution runtime"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "asteval>=1.0",
    "click>=8.1",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ai-worker = "ai_worker.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
